# claude-usage-analytics

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump-version.yml
claude_usage/: _enriched.py  _labels.py  _project_view.py  _redact.py  _view.py  classify.py  cli.py  db.py  doc.py  paths.py  pricing.py  projects.py  report.py  serve.py
commands/: project-confirm.md  project-init.md  project-list.md  stage.md  usage-compare.md  usage-doc.md  usage-guide.md  usage-parse.md  usage-report.md  usage.md
config/: prices.json  stage_keywords.json  stage_map.json
docs/: COMPARISON.md  GETTING_STARTED.md
docs/superpowers/plans/: 2026-06-02-cache-1h-cost-split.md  2026-06-09-fluency-panel-tooltips.md  2026-06-10-fluency-table-recommendations.md  (+2 more)
hooks/: session-start.sh  stop.sh
parser/: package-lock.json  package.json  parse.mjs
skills/getting-started/: SKILL.md
skills/vs-session-report/: SKILL.md
templates/: claude_usage.md.j2  dashboard.html  project_usage.md.j2  report.html.j2
tests/: conftest.py  test_api_until.py  test_classify.py  test_dashboard_panels.py  test_db_until.py  test_litellm_mapping.py  test_prices_refresh.py  test_pricing_cache_split.py  test_pricing_modes.py  test_project_description.py  test_project_view_totals.py  test_sessions_for_project.py  test_stage_inheritance.py  test_view_totals.py
(+8 files in other folders)
